force-app/main/default/objects/zkups__UPSShipment__c/zkups__UPSShipment__c.object-meta.xml
<CustomObject>
    <customHelpPage>zkups__shipmentHelp</customHelpPage>
    <description>UPS Shipment is a collection of data that represents the details of the UPS shipment</description>
    <label>UPS Shipment</label>
    <nameField>
        <displayFormat>UPS-Shipment-{0000000000}</displayFormat>
        <label>UPS Shipment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>UPS Shipments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>