force-app/main/default/objects/zkups__UPSShipment__c/fields/Shipmate_Label__c.field-meta.xml
<CustomField>
    <fullName>Shipmate_Label__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shipmate Label</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>UPS Shipments (Shipmate Label)</relationshipLabel>
    <relationshipName>UPS_Shipments</relationshipName>
    <type>Lookup</type>
</CustomField>