force-app/main/default/objects/zkups__UPSShipment__c/fields/zkups__Carrier__c.field-meta.xml
<CustomField>
    <fullName>zkups__Carrier__c</fullName>
    <label>Carrier</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>UPS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>