force-app/main/default/objects/zkups__UPSShipment__c/fields/zkups__Case__c.field-meta.xml
<CustomField>
    <fullName>zkups__Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>UPS Shipments</relationshipLabel>
    <relationshipName>UPS_Shipments_del</relationshipName>
    <type>Lookup</type>
</CustomField>