force-app/main/default/objects/zkups__UPSShipment__c/fields/zkups__DutiesPayorAccountCountry__c.field-meta.xml
<CustomField>
    <fullName>zkups__DutiesPayorAccountCountry__c</fullName>
    <label>Duties Payor Account Country</label>
    <length>2</length>
    <type>Text</type>
</CustomField>