force-app/main/default/objects/zkups__UPSShipment__c/fields/zkups__EMailMessage__c.field-meta.xml
<CustomField>
    <fullName>zkups__EMailMessage__c</fullName>
    <label>Email Message</label>
    <type>TextArea</type>
</CustomField>