force-app/main/default/objects/zkups__UPSShipment__c/fields/zkups__FirstReferenceValue__c.field-meta.xml
<CustomField>
    <fullName>zkups__FirstReferenceValue__c</fullName>
    <label>First Reference Value</label>
    <length>35</length>
    <type>Text</type>
</CustomField>