force-app/main/default/objects/zkups__UPSShipment__c/fields/zkups__LastTrackUpdateTime__c.field-meta.xml
<CustomField>
    <fullName>zkups__LastTrackUpdateTime__c</fullName>
    <label>Last Track Update Time</label>
    <type>DateTime</type>
</CustomField>