force-app/main/default/objects/zkups__UPSShipment__c/fields/zkups__LastTrackUSPSUpdateStatusCode__c.field-meta.xml
<CustomField>
    <fullName>zkups__LastTrackUSPSUpdateStatusCode__c</fullName>
    <label>Last Track USPS Update Status Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>