force-app/main/default/objects/zkups__UPSShipment__c/fields/zkups__MasterTrackingId__c.field-meta.xml
<CustomField>
    <fullName>zkups__MasterTrackingId__c</fullName>
    <label>UPS Tracking Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>