force-app/main/default/objects/zkups__UPSShipment__c/fields/zkups__RecipientAccount__c.field-meta.xml
<CustomField>
    <fullName>zkups__RecipientAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The account the shipment is being sent to.</description>
    <label>Recipient Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>UPS Shipments</relationshipLabel>
    <relationshipName>UPS_Shipments</relationshipName>
    <type>Lookup</type>
</CustomField>