force-app/main/default/objects/zkups__UPSShipment__c/fields/zkups__RecipientCity__c.field-meta.xml
<CustomField>
    <fullName>zkups__RecipientCity__c</fullName>
    <label>Recipient City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>