force-app/main/default/objects/zkups__UPSShipment__c/fields/zkups__ReferenceBarCode__c.field-meta.xml
<CustomField>
    <fullName>zkups__ReferenceBarCode__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reference Bar Code</label>
    <type>Checkbox</type>
</CustomField>