force-app/main/default/objects/zkups__UPSShipment__c/fields/zkups__SenderCompany__c.field-meta.xml
<CustomField>
    <fullName>zkups__SenderCompany__c</fullName>
    <label>Sender Company</label>
    <length>100</length>
    <type>Text</type>
</CustomField>