force-app/main/default/objects/zkups__UPSShipment__c/fields/zkups__ShipmentProcessingCompleted__c.field-meta.xml
<CustomField>
    <fullName>zkups__ShipmentProcessingCompleted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Shipment Processing Completed</label>
    <type>Checkbox</type>
</CustomField>