force-app/main/default/objects/zkups__UPSShipment__c/fields/zkups__ShipmentType__c.field-meta.xml
<CustomField>
    <fullName>zkups__ShipmentType__c</fullName>
    <label>Shipment Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>