force-app/main/default/objects/zkups__UPSShipment__c/fields/zkups__SsProcessReturnShipment__c.field-meta.xml
<CustomField>
    <fullName>zkups__SsProcessReturnShipment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Return Shipment</label>
    <type>Checkbox</type>
</CustomField>