force-app/main/default/objects/zkups__UPSShipment__c/fields/zkups__UserAllowedEditOfRecipientInfo__c.field-meta.xml
<CustomField>
    <fullName>zkups__UserAllowedEditOfRecipientInfo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>User Allowed Edit of Recipient Info</label>
    <type>Checkbox</type>
</CustomField>