force-app/main/default/objects/zkups__UPSShipment__c/listViews/GIF_Label_Creation.listView-meta.xml
<ListView>
    <fullName>GIF_Label_Creation</fullName>
    <columns>NAME</columns>
    <columns>zkups__Notes__c</columns>
    <columns>zkups__MasterTrackingId__c</columns>
    <columns>zkups__LabelImageType__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>zkups__LastTrackUpdateTime__c</columns>
    <columns>zkups__ShipmentDeleted__c</columns>
    <columns>zkups__Delivered__c</columns>
    <columns>zkups__StatusDescription__c</columns>
    <columns>zkups__SsProcessReturnShipment__c</columns>
    <columns>zkups__ActualDeliveryDate__c</columns>
    <columns>zkups__UPSCommercialInvoice__c</columns>
    <columns>zkups__RecipientCountry__c</columns>
    <columns>zkups__ServiceTypeName__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>zkups__LabelImageType__c</field>
        <operation>equals</operation>
        <value>GIF</value>
    </filters>
    <label>GIF Label Creation</label>
    <language>en_US</language>
</ListView>